<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:paddingStart="16dp"
        android:textColor="@color/whitecard"
        android:textSize="22sp"
        android:fontFamily="@font/ys_text_medium"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/SearchCard"
        style="@style/CardViewTemplateMain">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/search"
            style="@style/CardTextTemplate"
            app:drawableStartCompat="@drawable/search"
            app:drawableTint="@color/blacktext" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/medialibraryCard"
        style="@style/CardViewTemplateMain">

        <com.google.android.material.textview.MaterialTextView
            style="@style/CardTextTemplate"
            app:drawableStartCompat="@drawable/library_music_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
            android:text="@string/medialibrary"
            app:drawableTint="@color/blacktext" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/SettingsCard"
        style="@style/CardViewTemplateMain">

        <com.google.android.material.textview.MaterialTextView
            app:drawableStartCompat="@drawable/settings_applications_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
            android:text="@string/settings"
            style="@style/CardTextTemplate"
            app:drawableTint="@color/blacktext" />

    </androidx.cardview.widget.CardView>

</LinearLayout>
